--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,32 +9,40 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
 		<meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+		<script src="js/index.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div class="form">
-			<center><h1>Email Sending Service</h1></center>
+			<h1>Email Sending Service</h1>			
+			<div id="status" class="hidden"></div>
 			<br/>
-			<div></div>
-			<form action="SendEmailServlet" method="post">
+			<br/>
+			<form id="sendemail" name="sendemail">
 				<label for="from">From</label><br/><br/>
-				<input type="text" id="from" name="from">
+				<input type="email" id="from" name="from" placeholder="Your email address" required>
 				<br/>
 				<label for="to">To</label><br/><br/>
-				<input type="text" id="to" name="to">
+				<input id="to" name="to" placeholder="first@to.com, second@to.com..." 
+					type="email" multiple pattern="^([\w+-.%]+@[\w-.]+\.[A-Za-z]{2,4},*[\W]*)+$" required>
 				<br/>
 				<label for="cc">Cc</label><br/><br/>
-				<input type="text" id="cc" name="cc">
+				<input type="text" id="cc" name="cc" placeholder="first@cc.com, second@cc.com..."
+					type="email" multiple pattern="^([\w+-.%]+@[\w-.]+\.[A-Za-z]{2,4},*[\W]*)+$">
 				<br/>
 				<label for="bcc">Bcc</label><br/><br/>
-				<input type="text" id="bcc" name="bcc">
+				<input type="text" id="bcc" name="bcc" placeholder="first@bcc.com, second@bcc.com..."
+					type="email" multiple pattern="^([\w+-.%]+@[\w-.]+\.[A-Za-z]{2,4},*[\W]*)+$">
 				<br/>
 				<label for="subject">Subject</label><br/><br/>
-				<input type="text" id="subject" name="subject">
+				<input type="text" id="subject" name="subject" placeholder="Subject of the email">
 				<br/>
 				<label for="message">Message</label><br/><br/>
-				<textarea id="message" name="message" rows="10"></textarea>
+				<textarea id="message" name="message" rows="10" placeholder="Start typing your email message here" required></textarea>
 				<br/>
-				<center><input class="buttom" type="submit" value="Send Email"></center>
+				<div>
+					<input class="button" type="submit" value="Send Email">
+					<input class="button" type="reset" value="Reset"/>
+				</div>
 			</form>
 		</div>
 	</body>
